examples/ingress-host-validator/deploy/webhook-registration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: ingress-host-validator-webhook
  labels:
    app: ingress-host-validator-webhook
    kind: validating
webhooks:
  - name: ingress-host-validator-webhook.slok.dev
    clientConfig:
      service:
        name: ingress-host-validator-webhook
        namespace: default
        path: "/validating"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1akNDQWM0Q0NRQ2o1aWt3NlZlcHdUQU5CZ2txaGtpRzl3MEJBUXNGQURBMU1UTXdNUVlEVlFRRERDcHAKYm1keVpYTnpMV2h2YzNRdGRtRnNhV1JoZEc5eUxYZGxZbWh2YjJzdVpHVm1ZWFZzZEM1emRtTXdIaGNOTVRndwpOekE0TVRVME56VXdXaGNOTVRrd056QTRNVFUwTnpVd1dqQTFNVE13TVFZRFZRUUREQ3BwYm1keVpYTnpMV2h2CmMzUXRkbUZzYVdSaGRHOXlMWGRsWW1odmIyc3VaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUMwNGMvYXk3QWltWklkZHNFbmxmcWdKUHpRTW1pOEt3YVgyZGkzb2l5Zwo1TnBNajd3enhr [...]
    rules:
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: ["extensions"]
        apiVersions: ["v1beta1"]
        resources: ["ingresses"]
